--- a/public/firebase.html
+++ b/public/firebase.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Training</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Firebase Tutorial</title>
 </head>
 
 <body>
-    <h1>This is the Webpack Template</h1>
-    <p>Its placed in the src folder</p>
-    <p>Preety cool right?</p>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="algolia.html">Algolia Demos</a>
+        <a href="firebase.html">Firebase Tutorial</a>
+    </nav>
 <script src="index.js"></script><script src="algolia.js"></script><script src="firebase.js"></script></body>
 
 </html>
