Added the copyright favicon

--- a/src/html-templates/algolia-template.html
+++ b/src/html-templates/algolia-template.html
@@ -13,6 +13,20 @@
         <a href="algolia.html">Algolia Demos</a>
         <a href="firebase.html">Firebase Tutorial</a>
     </nav>
+    <section class="container">
+        <h2>Algolia Demo</h2>
+        <div class="ais-InstantSearch">
+            <h2>InstantSearch.js e-commerce demo</h2>
+            <div class="right-panel">
+                <div id="searchbox"></div>
+                <div id="hits"></div>
+                <div id="pagination"></div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <i class="fas fa-copyright"></i> 2012 - 2020
+    </footer>
 </body>
 
 </html>
