--- a/src/html-templates/firebase-template.html
+++ b/src/html-templates/firebase-template.html
@@ -13,6 +13,12 @@
         <a href="algolia.html">Algolia Demos</a>
         <a href="firebase.html">Firebase Tutorial</a>
     </nav>
+    <section class="container">
+        <h2>Firebase Demo</h2>
+    </section>
+    <footer>
+        <i class="fas fa-copyright"></i> 2012 - 2020
+    </footer>
 </body>
 
 </html>
