--- a/src/html-templates/index-template.html
+++ b/src/html-templates/index-template.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webpack Training</title>
-    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,9 +13,12 @@
         <a href="algolia.html">Algolia Demos</a>
         <a href="firebase.html">Firebase Tutorial</a>
     </nav>
-    <h1>This is the Webpack Template</h1>
-    <p>Its placed in the src folder</p>
-    <p>Preety cool right?</p>
+    <section class="container">
+        <p>Preety cool right?</p>
+    </section>
+    <footer>
+        <i class="fas fa-copyright"></i> 2012 - 2020
+    </footer>
 </body>
 
 </html>
