Reformaated the pages still woerk in progress

--- a/public/firebase.html
+++ b/public/firebase.html
@@ -13,6 +13,12 @@
         <a href="algolia.html">Algolia Demos</a>
         <a href="firebase.html">Firebase Tutorial</a>
     </nav>
+    <section class="container">
+        <h2>Firebase Demo</h2>
+    </section>
+    <footer>
+
+    </footer>
 <script src="index.js"></script><script src="algolia.js"></script><script src="firebase.js"></script></body>
 
 </html>
