--- a/public/algolia.html
+++ b/public/algolia.html
@@ -13,6 +13,17 @@
         <a href="algolia.html">Algolia Demos</a>
         <a href="firebase.html">Firebase Tutorial</a>
     </nav>
+    <section class="container">
+        <h2>Algolia Demo</h2>
+        <div class="ais-InstantSearch">
+            <h2>InstantSearch.js e-commerce demo</h2>
+            <div class="right-panel">
+                <div id="searchbox"></div>
+                <div id="hits"></div>
+                <div id="pagination"></div>
+            </div>
+        </div>
+    </section>
 <script src="index.js"></script><script src="algolia.js"></script><script src="firebase.js"></script></body>
 
 </html>
