Removed two h2 tags and merged them

--- a/src/html-templates/algolia-template.html
+++ b/src/html-templates/algolia-template.html
@@ -14,9 +14,8 @@
         <a href="firebase.html">Firebase Tutorial</a>
     </nav>
     <section class="container">
-        <h2>Algolia Demo</h2>
         <div class="ais-InstantSearch">
-            <h2>InstantSearch.js e-commerce demo</h2>
+            <h2>Algolia - InstantSearch.js contacts demo</h2>
             <div class="right-panel">
                 <div id="searchbox"></div>
                 <div id="hits"></div>
