--- a/public/firebase.html
+++ b/public/firebase.html
@@ -17,7 +17,7 @@
         <h2>Firebase Demo</h2>
     </section>
     <footer>
-
+        <i class="fas fa-copyright"></i> 2012 - 2020
     </footer>
 <script src="index.js"></script><script src="algolia.js"></script><script src="firebase.js"></script></body>
 
