--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,10 @@
         <a href="firebase.html">Firebase Tutorial</a>
     </nav>
     <section class="container">
-
-        <h1>This is the Webpack Template</h1>
-        <p>Its placed in the src folder</p>
         <p>Preety cool right?</p>
     </section>
     <footer>
-        <i class="fas fa-copyright"></i> It is very fast
+        <i class="fas fa-copyright"></i> 2012 - 2020
     </footer>
 <script src="index.js"></script><script src="algolia.js"></script><script src="firebase.js"></script></body>
 
