--- a/src/html-templates/algolia-template.html
+++ b/src/html-templates/algolia-template.html
@@ -17,7 +17,7 @@
         <div class="ais-InstantSearch">
             <h2>Algolia - InstantSearch.js contacts demo</h2>
             <div class="right-panel">
-                <div id="searchbox"></div>
+                <div id="algolia"></div>
                 <div id="hits"></div>
                 <div id="pagination"></div>
             </div>
