Setting up Tailwind: WIP

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Training</title>
-<link rel="icon" href="assets/favicon.png"><script defer src="index.bundle.js"></script><script defer src="algolia.bundle.js"></script><script defer src="firebase.bundle.js"></script></head>
-
-<body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="algolia.html">Algolia Demos</a>
-        <a href="firebase.html">Firebase Tutorial</a>
-    </nav>
-    <section class="container">
-        <p>Preety cool right?</p>
-    </section>
-    <footer>
-        <i class="fas fa-copyright"></i> 2012 - 2020
-    </footer>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Webpack Testing</title><script defer="defer" src="bundle.js"></script></head><body><section class="container"><h1>Apple</h1></section></body></html>
