--- a/src/html-templates/index-template.html
+++ b/src/html-templates/index-template.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <script src="./main.js"></script>
+    <section class="container">
+        <h1>Apple</h1>
+    </section>
 </body>
 
 </html>
