--- a/src/html-templates/index-template.html
+++ b/src/html-templates/index-template.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-    <nav></nav>
-    <section class="container">
-        <h1>Apple</h1>
-    </section>
+    <h1 class="text-3xl font-bold underline">
+        Hello world!
+    </h1>
 </body>
 
 </html>
