--- a/src/html-templates/index-template.html
+++ b/src/html-templates/index-template.html
@@ -12,6 +12,10 @@
     <h1 class="text-3xl font-bold underline">
         Hello world!
     </h1>
+
+    <section class="container">
+
+    </section>
 </body>
 
 </html>
