--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,46 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Testing</title>
+    <title>Webpack 5 Testing</title>
 <script defer src="bundle.js"></script></head>
 
 <body>
+    <nav>
+        <ul class="menu">
+            <li class="logo">
+                <a href="index.html">WEBPACK 5 Testing</a>
+            </li>
+            <li class="item">
+                <a href="#">About</a>
+            </li>
+            <li class="item">
+                <a href="#">Services</a>
+            </li>
+            <li class="item">
+                <a href="#">Features</a>
+            </li>
+            <li class="item">
+                <a href="#">Blog</a>
+            </li>
+            <li class="item">
+                <a href="#">Contact</a>
+            </li>
+            <li class="item button">
+                <a href="signin.html">Log In</a>
+            </li>
+            <li class="item button secondary">
+                <a href="signup.html">Create Account</a>
+            </li>
+            <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+        </ul>
+    </nav>
+
     <section class="container">
-        <h1>Apple</h1>
+        <article>
+            <p>Starting point of any website project</p>
+            <img src="../images/Webpack5-Color@4x.png" alt="">
+        </article>
     </section>
 </body>
 
